modificamos el nombre de la pagina

--- a/diseñoInstantGaming/index.html
+++ b/diseñoInstantGaming/index.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/2384174807.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="./img/logo.webp" type="image/x-icon">
-    <title>Pagina de juegos</title>
+    <title>Pagina de juegos Miguel</title>
 </head>
 <body>
     <header>
