añadimos barra de navegaciónn y reponsividad

--- a/diseñoInstantGaming/index.html
+++ b/diseñoInstantGaming/index.html
@@ -9,10 +9,21 @@
     <title>Pagina de juegos Miguel Pro</title>
 </head>
 <body>
+    <input type="checkbox" name="a" id="botonMenu">
+    <div class="menuHamburguesa">   
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <header>
         <div>
             <img src="./img/logo.webp" alt="logo">
             <h2>JuegosMiguel</h2>
+            <form action="#" method="post">
+                <input type="text" name="productoBuscar" placeholder="search...">
+                <input type="submit" value="Buscar" name="buscar">
+            </form>
         </div>
         <nav>
             <ul>
@@ -29,63 +40,91 @@
                 <div> 
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
+                  
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
             <div>
                 <div>
                     <h3 class="descuento">-25%</h3>
                     <img src="https://images7.alphacoders.com/901/901507.jpg" alt="artorias">
-                    <h3>Dark Souls</h3>
+                    <div>
+                        <h3>Dark Souls</h3>
+                        <h3>Precio:30€</h3>
+                    </div>
                 </div>
             </div>
         </div>
